--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,16 @@
+<!-- popup.html -->
+
 <!DOCTYPE html>
 <html>
-  <head>
-    <style>
-      body {
-        width: 200px;
-        padding: 10px;
-      }
-    </style>
-  </head>
-  <body>
-    <p id="acronymInfo">Loading...</p>
-    <script src="popup.js"></script>
-  </body>
+
+<head>
+  <title>Acronym Tooltip</title>
+</head>
+
+<body>
+  <div id="result">No text highlighted</div>
+
+  <script src="popup.js"></script>
+</body>
+
 </html>
