--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,42 @@
-<!-- popup.html -->
-
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <title>Acronym Tooltip</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-color: #001f3f; /* Dark Blue */
+            color: #fff; /* White */
+            margin: 0;
+            padding: 40px; /* Increased padding for a larger popup */
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* Align items to the left */
+            justify-content: space-between;
+            min-width: 300px; /* Set a minimum width */
+        }
+
+        #acronymInfo {
+            background-color: #d9534f; /* Red */
+            padding: 20px; /* Increased padding for a larger tooltip */
+            border-radius: 8px;
+            margin-bottom: 20px; /* Increased margin */
+            font-size: 16px; /* Adjusted font size */
+        }
+
+        #helloImage {
+            width: 40px; /* Decreased width for a smaller image */
+            height: auto;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            border-radius: 5px;
+        }
+    </style>
 </head>
-
 <body>
-  <div id="result">No text highlighted</div>
-
-  <script src="popup.js"></script>
+    <p id="acronymInfo">Highlight an acronym to start</p>
+    <img src="hello_extensions.png" alt="Hello Extensions" id="helloImage">
+    <script src="popup.js"></script>
 </body>
-
 </html>
