add updated dictionary

--- a/popup.html
+++ b/popup.html
@@ -37,6 +37,8 @@
 <body>
     <p id="acronymInfo">Highlight an acronym to start</p>
     <img src="hello_extensions.png" alt="Hello Extensions" id="helloImage">
+    <div id="acronymType"></div>
+    <div id="result">No text highlighted</div>
     <script src="popup.js"></script>
 </body>
 </html>
