--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: #001f3f; /* Dark Blue */
+            background-color: #003366; /* Dark Blue */
             color: #fff; /* White */
             margin: 0;
             padding: 40px; /* Increased padding for a larger popup */
@@ -17,7 +17,7 @@
         }
 
         #acronymInfo {
-            background-color: #d9534f; /* Red */
+            background-color: #ED1C24; /* Red */
             padding: 20px; /* Increased padding for a larger tooltip */
             border-radius: 8px;
             margin-bottom: 20px; /* Increased margin */
