--- a/popup.html
+++ b/popup.html
@@ -16,12 +16,13 @@
             min-width: 300px; /* Set a minimum width */
         }
 
-        #acronymInfo {
+        h1#acronymInfo {
             background-color: #ED1C24; /* Red */
-            padding: 20px; /* Increased padding for a larger tooltip */
-            border-radius: 8px;
-            margin-bottom: 20px; /* Increased margin */
-            font-size: 16px; /* Adjusted font size */
+            padding: 5px; /* Increased padding for a larger tooltip */
+            border-radius: 4px;
+            margin-bottom: 10px; /* Increased margin */
+            margin-top: 2px; /* Adjusted margin-top to create space */
+            font-size: 16px; /* Adjusted font size for a header */
         }
 
         #helloImage {
@@ -35,7 +36,7 @@
     </style>
 </head>
 <body>
-    <p id="acronymInfo">Highlight an acronym to start</p>
+    <h1 id="acronymInfo">Highlight an acronym to start</h1>
     <img src="hello_extensions.png" alt="Hello Extensions" id="helloImage">
     <div id="acronymType"></div>
     <div id="result">No text highlighted</div>
