--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,12 @@
             right: 20px;
             border-radius: 5px;
         }
+        #defType{
+            background-color: blanchedalmond;
+            color: #003366;
+            display: inline;
+            padding: 0px 2px 2px 2px;
+        }
     </style>
 </head>
 <body>
