add defintions and formatting

--- a/popup.html
+++ b/popup.html
@@ -38,6 +38,16 @@
             color: #003366;
             display: inline;
             padding: 0px 2px 2px 2px;
+            font-weight: bold;
+        }
+
+        #result h2 {
+            margin-bottom: 7px;
+        }
+
+        #description {
+            margin-left: 14px;
+            margin-right: 10px;
         }
     </style>
 </head>
